Fixed Scroll Position Issue when Opening a New Panel, Fixed Page not Scrolling to the End on iOS Safari, Prevented Users from Selecting Images to Improve Usability, Updated Camera Position

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
 }
 
 .experience-canvas {
+  position: fixed;
   width: 100%;
   height: 100%;
 }
@@ -169,6 +170,9 @@ a:focus {
   cursor: help;
   opacity: 0;
   transition: opacity 0.3s;
+  /* Prevent selection */
+  -webkit-user-drag: none;
+  user-select: none;
 }
 
 .museum .label {
@@ -197,8 +201,6 @@ a:focus {
   transition: opacity 0.2s;
   pointer-events: none;
 }
-
-
 
 .text h3 {
   margin-bottom: 1rem;
@@ -343,5 +345,12 @@ table {
   footer {
     flex-direction: column;
     gap: 0.5rem;
+  }
+}
+
+@supports (-webkit-touch-callout: none) {
+  /* CSS specific to iOS devices */
+  .info-panel {
+    height: -webkit-fill-available;
   }
 }
